midpoint/release/4.3/index.adoc
---
layout: release
release-version: '4.3'
wiki-name: Release 4.3
---
= MidPoint 4.3 "Faraday"
:release-version: 4.3
:page-liquid:

Release {release-version} is a thirty-fifth midPoint release code-named _Faraday_. The {release-version} release brings performance improvements, user interface and diagnostic improvements and major internal improvements.

++++
{% include release-data.html %}
++++

++++
{% capture dedicationContent %}
<p>
    <a href="https://en.wikipedia.org/wiki/Michael_Faraday">Michael Faraday</a> (1791-1867) was an English scientist who contributed to the study of electromagnetism and electrochemistry.
    His research on electricity and magnetic fields lead him to inventions of electromagnetic rotary devices, which formed the foundation of electric motor technology.
    He was one of the most influential scientists in history, paving the way for practical use of electricity in technology.
    Even though it might not been obvious during his lifetime, Faraday's work changed our lives forever.
</p>
<p>
    Similarly to Faraday's inventions, MidPoint 4.3 brings radical improvements.
    However, most of the improvements are still hidden under the hood.
    MidPoint 4.3 is paving the way for major leap in performance and scalability that is planned for midPoint 4.4.
    Yet, midPoint 4.3 still brings significant benefits on its own.
    There are numerous improvements to user interface and diagnostics, as well as performance improvements.
    MidPoint 4.3 is a significant step in the direction of large-scale midPoint deployments.
</p>
{% endcapture %}
{% include release-dedication.html content=dedicationContent %}
++++

== Changes With Respect To Version 4.2

=== New Features and Improvements

* Major features

** Preliminary results from xref:/midpoint/projects/midscale/[MidScale project], bringing some performance and scalability improvements.

** Human-friendly query language (experimental)

** Significant improvement to password management page

** Diagnostic and visibility improvements

** xref:/midpoint/reference/latest/resources/asynchronous/outbound/[Asynchronous (messaging) outbound resources] (experimental)


* User interface improvements

** Flat list display for organizational units

** Improved display of disabled roles

** Sorting of values on preview page

** Improved customization of basic/advanced search

** Search through the entire role catalog (role request page)

** Support for sorting of custom columns

** Various minor usability and UX improvements


* Miscellaneous improvements

** Minor function library improvements

** Support for expressions in certification definition search filters

** Ability to filter/skip audit records by using custom expression


* Diagnostics, Visibility, Robustness

** Storing more operation errors in the objects

** xref:/midpoint/reference/latest/tasks/task-error-handling/[Retries of failed synchronization operations] (experimental)

** Improved handling of multi-node task status

** Minor visibility improvements to triggers, expressions, task progress, ...


* Internals and Development

** Early prototype of scalable repository implementation based on PostgreSQL (experimental)

** Code cleanups and dependency upgrades

** Support for global namespace prefixes

** Numerous smaller performance improvements in various places in the system.

** Localization service passed to script evaluators

** Significant improvements to Schrodinger testing framework

** Support for storing objects in JSON in repository (experimental)


=== Deprecation, Feature Removal And Incompatible Changes

* Use of HQL query language for audit log queries and dashboard widgets is deprecated since midPoint 4.2.
Support of HQL for audit log queries and dashboard widgets is planned for removal in midPoint 4.4.
Please use midPoint query language instead.

* Use of Jasper-based reports in midPoint is deprecated since midPoint 4.2 in favor of the new "native" reports.
The support for Jasper-based report is planned for removal in midPoint 4.4, therefore it is recommended to migrate the reports as soon as possible.

* Support for specification of custom resource namespace (`namespace` item in `ResourceType`) is deprecated.
The support will be dropped in midPoint 4.4.

* Support for production deployments of midPoint in Microsoft Windows environment is deprecated.
Microsoft Windows will still be supported for evaluation, demo, development and similar non-production purposes.
Support for windows-based production deployments will be removed in midPoint 4.4.

* Microsoft Internet Explorer is no longer supported.
Support for Microsoft Internet Explorer was deprecated since midPoint 4.2.

* MySQL and MariaDB are no longer supported.
Support for MySQL and MariaDB was deprecated since midPoint 4.1.
Please see xref:/midpoint/reference/latest/repository/repository-database-support/[Repository Database Support] for details.
It is strongly recommended to use PostgreSQL database instead.

* JMX-based node-to-node communication in midPoint cluster is deprecated.
Please use the default REST communication method instead.

* Explicit deployment to an external web container is deprecated since midPoint 4.1.

* MidPoint plug-in for Eclipse IDE was never officially supported and it will not be developed any more.
This plugin is abandoned in favor of IntelliJ IDEA environment (xref:/midpoint/tools/studio/[MidPoint Studio]).

* The namespace URI for configuration elements for experimental built-in asynchronous update connector
was changed from `http://midpoint.evolveum.com/xml/ns/public/connector/builtin-1/bundle/com.evolveum.midpoint.provisioning.ucf.impl.builtin.async/AsyncUpdateConnector` to `http://midpoint.evolveum.com/xml/ns/public/connector/builtin-1/bundle/com.evolveum.midpoint.provisioning.ucf.impl.builtin.async.update/AsyncUpdateConnector` (the `.update` package name was added).

=== Releases Of Other Components

* New versions of xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.LdapConnector/[LDAP Connector], xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.ad.AdLdapConnector/[Active Directory Connector] and xref:/connectors/connectors/org.identityconnectors.databasetable.DatabaseTableConnector/[DatabaseTable Connector] were released during the course of midPoint 4.3 development.

* Docker images were released in Docker Hub: https://hub.docker.com/layers/evolveum/midpoint/4.3/images/sha256-292a91c2b2bdd02d5e98eb1b003dc4fe075757e690136337dec5656f22e3af42?context=explore[4.3] and https://hub.docker.com/layers/evolveum/midpoint/4.3-alpine/images/sha256-cd92e0f2becf1538d8e463fe8018107bf03b6e5ebbebcf1238c2856a42e4db8d?context=explore[4.3-alpine].

* Overlay project examples were released together with midPoint 4.3 release.

* xref:/midpoint/tools/studio/[MidPoint Studio] version 4.3 was released shortly after midPoint 4.3 release.
MidPoint Studio is officially a part of midPoint subscriptions now, covered by ordinary midPoint support programs.

* Java REST client 4.3 will be released shortly after midPoint 4.3 release.

* Schrodinger testing framework will be released shortly after Java REST client release.

++++
{% include release-quality.html %}
++++

=== Limitations

Following list provides summary of limitation of this midPoint release.

* Functionality that is marked as xref:/midpoint/versioning/experimental/[Experimental Functionality] is not supported for general use (yet).
Such features are not covered by midPoint support.
They are supported only for those subscribers that funded the development of this feature by the means of xref:/support/subscription-sponsoring/[subscriptions and sponsoring] or for those that explicitly negotiated such support in their support contracts.

* MidPoint comes with bundled xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.LdapConnector/[LDAP Connector]. Support for LDAP connector is included in standard midPoint support service, but there are limitations.
This "bundled" support only includes operations of LDAP connector that 100% compliant with LDAP standards.
Any non-standard functionality is explicitly excluded from the bundled support.
We strongly recommend to explicitly negotiate support for a specific LDAP server in your midPoint support contract.
Otherwise only standard LDAP functionality is covered by the support.
See xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.LdapConnector/[LDAP Connector] page for more details.

* MidPoint comes with bundled xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.ad.AdLdapConnector/[Active Directory Connector (LDAP)]. Support for AD connector is included in standard midPoint support service, but there are limitations.
Only some versions of Active Directory deployments are supported.
Basic AD operations are supported, but advanced operations may not be supported at all.
The connector does not claim to be feature-complete.
See xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.ad.AdLdapConnector/[Active Directory Connector (LDAP)] page for more details.

* MidPoint user interface has flexible (fluid) design and it is able to adapt to various screen sizes, including screen sizes used by some mobile devices.
However, midPoint administration interface is also quite complex and it would be very difficult to correctly support all midPoint functionality on very small screens.
Therefore midPoint often works well on larger mobile devices (tablets) it is very likely to be problematic on small screens (mobile phones).
Even though midPoint may work well on mobile devices, the support for small screens is not included in standard midPoint subscription.
Partial support for small screens (e.g. only for self-service purposes) may be provided, but it has to be explicitly negotiated in a subscription contract.

* There are several add-ons and extensions for midPoint that are not explicitly distributed with midPoint.
This includes Java client library, various samples, scripts, connectors and other non-bundled items.
Support for these non-bundled items is limited.
Generally speaking those non-bundled items are supported only for platform subscribers and those that explicitly negotiated the support in their contract.

* MidPoint contains a basic case management user interface.
This part of midPoint user interface is not finished.
The only supported part of this user interface is the part that is used to process requests and approvals.
Other parts of case management user interface are considered to be experimental, especially the parts dealing with manual provisioning cases.

This list is just an overview, it may not be complete.
Please see the documentation regarding detailed limitations of individual features.

== Platforms

MidPoint is known to work well in the following deployment environment.
The following list is list of *tested* platforms, i.e. platforms that midPoint team or reliable partners personally tested with this release.
The version numbers in parentheses are the actual version numbers used for the tests.

It is very likely that midPoint will also work in similar environments.
But only the versions specified below are supported as part of midPoint subscription and support programs - unless a different version is explicitly agreed in the contract.


=== Operating System

MidPoint is likely to work on any operating system that supports the Java platform.
However, for *production deployment*, only some operating systems are supported:

* Linux (x86_64)

* Microsoft Windows Server (DEPRECATED, planned for removal in 4.4)

We are positive that MidPoint can be successfully installed on other operating systems, especially macOS and Microsoft Windows desktop.
Such installations can be used to for evaluation, demonstration or development purposes.
However, we do not support these operating systems for production environments.
The tooling for production use is not maintained, such as various run control (start/stop) script, low-administration and migration tools, backup and recovery support and so on.

=== Java

* OpenJDK 11 (11.0.10).
This is a *recommended* platform.

OpenJDK 11 is a recommended Java platform to run midPoint.

Support for Oracle builds of JDK is provided only for the period in which Oracle provides public support (free updates) for their builds.
As far as we are aware, free updates for Oracle JDK 11 are no longer available.
Which means that Oracle JDK 11 is not supported for MidPoint any more.
MidPoint is an open source project, and as such it relies on open source components.
We cannot provide support for platform that do not have public updates as we would not have access to those updates and therefore we cannot reproduce and fix issues.
Use of open source OpenJDK builds with public support is recommended instead of proprietary builds.


=== Web Containers

MidPoint is bundled with an embedded web container.
This is the default and recommended deployment option.
See xref:/midpoint/reference/latest/deployment/stand-alone-deployment/[Stand-Alone Deployment] for more details.

Explicit deployment of `war` file to web container is deprecated.
Following Apache Tomcat versions are supported:

* Apache Tomcat 9.0 (9.0.37)

Apache Tomcat 8.0.x and 8.5.x are no longer supported.
Support for explicit deployment to newer Tomcat versions is not planned.
Please migrate to the default xref:/midpoint/reference/latest/deployment/stand-alone-deployment/[stand-alone deployment model] as soon as possible.

=== Databases

MidPoint supports several databases.
However, performance characteristics and even some implementation details can change from database to database.
Since midPoint 4.0, *PostgreSQL is the recommended database* for midPoint deployments.

* H2 (embedded).
Supported only in embedded mode.
Not supported for production deployments.
Only the version specifically bundled with midPoint is supported. +
H2 is intended only for development, demo and similar use cases.
It is *not* supported for any production use.
Also, upgrade of deployments based on H2 database are not supported.

* PostgreSQL 13, 12, 11 and 10. *PostgreSQL 13 or 12 is strongly recommended* option.

* Oracle 12c

* Microsoft SQL Server 2019, 2016 SP1

Our strategy is to officially support the latest stable version of PostgreSQL database (to the practically possible extent).
PostgreSQL database is the only database with clear long-term support plan in midPoint.
We make no commitments for future support of any other database engines.
See xref:/midpoint/reference/latest/repository/repository-database-support/[Repository Database Support] page for the details.

Only a direct connection from midPoint to the database engine is supported.
Database and/or SQL proxies, database load balancers or any other devices (e.g. firewalls) that alter the communication are not supported.


=== Supported Browsers

* Firefox
* Safari
* Chrome
* Edge
* Opera

Any recent version of the browsers is supported.
That means any stable stock version of the browser released in the last two years.
We formally support only stock, non-customized versions of the browsers without any extensions or other add-ons.
According to the experience most extensions should work fine with midPoint.
However, it is not possible to test midPoint with all of them and support all of them.
Therefore, if you chose to use extensions or customize the browser in any non-standard way you are doing that on your own risk.
We reserve the right not to support customized web browsers.


== Important Bundled Components

[%autowidth]
|===
| Component | Version | Description

| Tomcat
| 9.0.37
| Web container

| ConnId
| 1.5.0.17
| ConnId Connector Framework

| LDAP connector bundle
| 3.2
| LDAP, Active Directory and eDirectory connector

| CSV connector
| 2.4
| Connector for CSV files

| DatabaseTable connector
| 1.4.6.0
| Connector for simple database tables

|===

++++
{% include release-download.html %}
++++

== Upgrade

MidPoint is software that is designed for easy upgradeability.
We do our best to maintain strong backward compatibility of midPoint data model, configuration and system behavior.
However, midPoint is also very flexible and comprehensive software system with a very rich data model.
It is not humanly possible to test all the potential upgrade paths and scenarios.
Also some changes in midPoint behavior are inevitable to maintain midPoint development pace.
Therefore we can assure reliable midPoint upgrades only for xref:/support/subscription-sponsoring/[midPoint subscribers].
This section provides overall overview of the changes and upgrade procedures.
Although we try to our best, it is not possible to foresee all possible uses of midPoint.
Therefore the information provided in this section are for information purposes only without any guarantees of completeness.
In case of any doubts about upgrade or behavior changes please use services associated with xref:/support/subscription-sponsoring/[midPoint subscription programs].


=== Upgrade From MidPoint 4.2.x

MidPoint {release-version} data model is not completely backwards compatible with previous midPoint versions.
However, vast majority of data items is compatible.
Therefore xref:/midpoint/reference/latest/upgrade/upgrade-guide/[the usual upgrade mechanism] can be used.
There are some important changes to keep in mind:

* Database schema needs to be upgraded using the xref:/midpoint/reference/latest/upgrade/upgrade-guide/[usual mechanism].
Please see xref:/midpoint/reference/latest/upgrade/upgrade-guide/[] for details.

* Version numbers of some bundled connectors have changed.
Therefore connector references from the resource definitions that are using the bundled connectors need to be updated.

* The namespace URI for configuration elements for experimental built-in asynchronous update connector
was changed. Therefore, resources that use this connector need to be updated to use the new namespace URI.

=== Upgrade From MidPoint 4.1.x Or Older

Upgrade from midPoint 4.1.x or older is not supported directly.
Please upgrade to midPoint 4.2.x first.


=== Changes In Initial Objects Since 4.2

MidPoint has a built-in set of "initial objects" that it will automatically create in the database if they are not present.
This includes vital objects for the system to be configured (e.g. role `Superuser` and user `administrator`). These objects may change in some midPoint releases.
However, midPoint is conservative and avoids overwrite of customized configuration objects.
Therefore midPoint does not overwrite existing objects when they are already in the database.
This may result in upgrade problems if the existing object contains configuration that is no longer supported in a new version.
The following list contains a summary of changes to the initial objects in this midPoint release.
The complete new set of initial objects is in the `config/initial-objects` directory in both the source and binary distributions.
Although any problems caused by the change in initial objects is unlikely to occur, the implementors are advised to review the changes and assess the impact on case-by-case basis:

* `000-system-configuration.xml`: added `schedulingState` to `TaskType` object details GUI configuration, added `admin-dashboard` configuration.

* `021-archetype-system-role.xml`, `022-archetype-business-role.xml`, `521-archetype-task-approval.xml`: Updated icons.

* `040-role-enduser.xml`: added lookup table get authorization.

Please review link:https://github.com/Evolveum/midpoint/commits/master/gui/admin-gui/src/main/resources/initial-objects[source code history] for detailed list of changes.


=== Bundled Connector Changes Since 4.2

* LDAP and AD connectors were upgraded to the latest available version 3.2.

* DatabaseTable connector was upgraded to the latest available version 1.4.6.0.

=== Behavior Changes Since 4.2

* Task OID in audit records now points to the root of the task tree, if applicable.
Note that task identifier remains to be the identifier of actual task that executed the request.

* Dead shadows remain linked to the focus (user).
Handling links to dead shadows was inconsistent in previous midPoint versions.
This was aligned in midPoint 4.3.
Links to dead shadows are marked by relation of type "related".

* Custom dashboards are not displayed automatically in the menu.
Dashboards that are to be included in the menu have to be explicitly enabled in system configuration.

* Requester information in notification handlers was corrected (bug:MID-6754[]), which may be a minor compatibility issue.

=== Public Interface Changes Since 4.2

* Prism API was changes in several places.
However, this is not yet stable public interface therefore the changes are not tracked in details.

* There were changes to the xref:/midpoint/reference/latest/interfaces/model-java/[IDM Model Interface] (Java).
Please see source code history for details.


=== Important Internal Changes Since 4.2

These changes should not influence people that use midPoint "as is".
These changes should also not influence the XML/JSON/YAML-based customizations or scripting expressions that rely just on the provided library classes.
These changes will influence midPoint forks and deployments that are heavily customized using the Java components.

* There were changes in internal code structure at numerous places do to refactoring and code cleanup.
Most changes were related to the xref:/midpoint/projects/midscale/[midScale] effort.
Heavy customizations of midPoint 4.2 may break in midPoint 4.3.

++++
{% include release-issues.html %}
++++

Some of the known issues are listed below:

* There is a support to set up storage of credentials in either encrypted or hashed form.
There is also unsupported and undocumented option to turn off credential storage.
This option partially works, but there may be side effects and interactions.
This option is not fully supported yet.
Do not use it or use it only at your own risk.
It is not included in any midPoint support agreement.

* Native attribute with the name of 'id' cannot be currently used in midPoint (bug:MID-3872[]).
If the attribute name in the resource cannot be changed then the workaround is to force the use of legacy schema.
In that case midPoint will use the legacy ConnId attribute names (icfs:name and icfs:uid).

* We have seen issues upgrading H2 instances to a new version.
Generally speaking H2 is not supported for any particular use.
We try to make H2 work and we try to make it survive an upgrade, but there are occasional issues with H2 use and upgrade.
Make sure that you backup your data in a generic format (XML/JSON/YAML) in regular intervals to avoid losing them.
It is particularly important to backup your data before upgrades and when working with development version of midPoint.
